# Employee-Salary-Prediction

./: .gitignore  README.md  WARP.md  employee_salary_preds.db  mlflow.db  pyproject.toml
artifacts/: categorical_summary.csv  eda_summary_report.json  numeric_summary.csv
artifacts/data/: outlier_summary.csv  preprocessing_pipeline.joblib
artifacts/feature_store/: expected_features.json
config/: EDA_config.yaml  model_training_config.yaml  preprocessing_config.yaml
notebooks/: 01_eda.ipynb  03_model_training.ipynb
src/api/: app.py
src/app/: streamlit_app.py
src/eda/: data_overview.py  data_quality.py  eda_pipeline.py  visualizations.py
src/inference/: service.py
src/model_training/: data_loader.py  feature_importance_analyzer.py  hyperparameter_tuner.py  model_evaluator.py  model_trainer.py  model_training_pipeline.py  model_validator.py
src/preprocessing/: __init__.py  config_validator.py  data_splitter.py  data_validator.py  encoding.py  feature_transformations.py  handle_duplicates.py  handle_missing.py  handle_outliers.py  preprocessing_pipeline.py
src/utils/: __init__.py  logging_mixin.py  mlflow_utils.py
tests/: test_api.py  test_inference_and_shap.py  test_preprocessing_pipeline.py
